sbtc-mini/tests/sbtc-hand-off_test.clar
;; cycle windows
(define-constant disbursement 0x00)
(define-constant registration 0x01)
(define-constant voting 0x02)
(define-constant transfer 0x03)
(define-constant penalty 0x04)
(define-constant bad-peg-state 0x05)

(define-constant err-current-pool-not-found (err u7000))
(define-constant err-current-threshold-wallet (err u7001))
(define-constant err-previous-pool-not-found (err u7002))
(define-constant err-pool-cycle (err u7003))
(define-constant err-previous-threshold-wallet (err u7004))
(define-constant err-parsing-btc-tx (err u7005))
(define-constant err-tx-not-mined (err u7006))
(define-constant err-not-in-transfer-window (err u7007))
(define-constant err-balance-already-transferred (err u7008))
(define-constant err-wrong-pubkey (err u7009))
(define-constant err-peg-balance-not-sufficient (err u7010))
(define-constant err-threshold-to-scriptpubkey (err u7011))

(define-private (test-relay-hand-off-fulfillment
    (burn-height uint)
    (tx (buff 1024))
    (header (buff 80))
    (tx-index uint)
    (tree-depth uint)
    (wproof (list 14 (buff 32)))
    (witness-merkle-root (buff 32))
    (witness-reserved-data (buff 32))
    (ctx (buff 1024))
    (cproof (list 14 (buff 32)))
    (expected-error (response bool uint)))
    (let ((result (contract-call? .sbtc-hand-off relay-hand-off-fulfillment burn-height tx header tx-index tree-depth wproof witness-merkle-root witness-reserved-data ctx cproof))
        )
		(asserts! (is-eq result expected-error) (err {expected: (some expected-error), actual: (some result), msg: "Result mismatch"}))
        (ok true)
    )
)

(define-public (test-relay-hand-off-fulfillment-pool-not-found)
  (let (
      (burn-height u3)
      (tx 0x020000000001010052458c56fea00527237f73d6b7bb4cbaf1f5436c9d2673ae2e0164f4ad17d20000000000fdffffff010065cd1d00000000225120f855ca43402fb99cde0e3e634b175642561ff584fe76d1686630d8fd2ea93b360340000102030405060708090a0b0c0d0e0f000102030405060708090a0b0c0d0e0f000102030405060708090a0b0c0d0e0f000102030405060708090a0b0c0d0e0f3c183c001a7321b74e2b6a7e949e6c4ad313035b1665095017007520f855ca43402fb99cde0e3e634b175642561ff584fe76d1686630d8fd2ea93b36ac41c050929b74c1a04954b78b4b6035e97a5e078a5a0f28ec96d547bfee9ace803ac074708f439116be919de13c6d3200d2305fcbdf5a9e7d2c079e85b427bb110e9000000000)
      (header 0x0000000000000000000000000000000000000000000000000000000000000000000000000b5c59d28b48942bba392cabfc2459c2842e6549e85bc2714b0ebce5c1c925d7000000000000000000000000)
      (tx-index u0)
      (tree-depth u4)
      (wproof (list 0x030305040607080a0b0c0e0f00010203 0x030305040607080a0b0c0e0f00010203 0x030305040607080a0b0c0e0f00010203 0x030305040607080a0b0c0e0f00010203))
      (witness-merkle-root 0x5c44856d25f0c9c3149dabb4efba3b9ddec1f8f833921dd323bd6d1ac1bd277f)
      (witness-reserved-data 0x0000000000000000000000000000000000000000000000000000000000000000)
      (ctx 0x6a30ab928118563dc27888d9af98d0138c32a8ed0efc9dcd0bf4cc4b503114de)
      (cproof (list 0x030305040607080a0b0c0e0f00010203 0x030305040607080a0b0c0e0f00010203 0x030305040607080a0b0c0e0f00010203 0x030305040607080a0b0c0e0f00010203))
      (expected-error none)
    )
    (test-relay-hand-off-fulfillment burn-height tx header tx-index tree-depth wproof witness-merkle-root witness-reserved-data ctx cproof err-current-pool-not-found))
)
